--- a/WebDevelopment - 1/HTML/Week Two/Class 03/index.html
+++ b/WebDevelopment - 1/HTML/Week Two/Class 03/index.html
@@ -1,9 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <!-- List  -->
+
+  <!-- ordered List (Number List) -->
+  <ol>
+    <li>Chop potatoes into quarters</li>
+    <li>Simmer in salted water for 15-20 minutes until tender</li>
+    <li>Heat milk, butter and nutmeg</li>
+    <li>Drain potatoes and mash</li>
+    <li>Mix in the milk mixture</li>
+  </ol>
+
+  <!-- Unordered List (Bullet List) -->
+
+  <ul>
+    <li>1kg King Edward potatoes</li>
+    <li>100ml milk</li>
+    <li>50g salted butter</li>
+    <li>Freshly grated nutmeg</li>
+    <li>Salt and pepper to taste</li>
+  </ul>
+
+  <!-- Defination list -->
+
+  <dl>
+    <dt>HTML</dt>
+    <dd>
+      The HyperText Markup Language or HTML is the standard markup language
+      <br />
+      for documents designed to be displayed in a web browser. It defines the
+      <br />
+      meaning and structure of web content.
+    </dd>
+    <dt>CSS</dt>
+    <dd>
+      CSS stands for Cascading Style Sheets. It is a stylesheet language used
+      <br />
+      to describe the presentation of a document written in HTML or XML.
+    </dd>
+    <dd>
+      CSS describes how elements should be rendered on screen, on paper, in
+      <br />
+      speech, or on other media.
+    </dd>
+    <dt>Javascript</dt>
+    <dd>
+      JavaScript, often abbreviated as JS, is a programming language that is
+      <br />
+      one of the core technologies of the World Wide Web, alongside HTML and
+      <br />
+      CSS. As of 2023, 98.7% of websites use JavaScript on the client side for
+      <br />
+      webpage behavior, often incorporating third-party libraries.
+    </dd>
+  </dl>
+
+  <!-- Nested List  -->
+
+  <ul>
+    <b><u>Bano Qabil 2.0 Courses : </b></u>
+    <li>Graphic Design</li>
+    <li>
+      Web Development
+      <ul>
+        <li>Batch 1601</li>
+        <li>Batch 1602</li>
+        <li>Batch 1603</li>
+        <li>Batch 1604</li>
+      </ul>
+    </li>
+    <li>Amazon</li>
+  </ul>
+
+
+  <ol>
+    <b><u>Bano Qabil 2.0 Courses : </b></u>
+    <li>Graphic Design</li>
+    <li>
+      Web Development
+      <ol>
+        <li>Batch 1601</li>
+        <li>Batch 1602</li>
+        <li>Batch 1603</li>
+        <li>Batch 1604</li>
+      </ol>
+    </li>
+    <li>Amazon</li>
+  </ol>
+</body>
+
 </html>
