--- a/WebDevelopment - 1/HTML/Week Three/Class 04/Index.html
+++ b/WebDevelopment - 1/HTML/Week Three/Class 04/Index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- Adding Images -->
+    <img
+      src="images/quokka.jpg"
+      alt="A family of
+    quokka"
+      title="The quokka is an Australian
+    marsupial that is similar in size to the
+    domestic cat."
+    />
+    <!-- Height & Width
+ of Images -->
+    <img
+      src="images/quokka.jpg"
+      alt="A family of
+ quokka"
+      width="600"
+      height="450"
+    />
+
+    <!-- Where to Place Images
+in Your Code -->
+    <img src="images/bird.gif" alt="Bird" width="100" height="100" />
+    <p>
+      There are around 10,000 living species of birds that inhabit different
+      ecosystems from the Arctic to the Antarctic. Many species undertake long
+      distance annual migrations, and many more perform shorter irregular
+      journeys.
+    </p>
+    <hr />
+    <p>
+      <img src="images/bird.gif" alt="Bird" width="100" height="100" />There are
+      around 10,000 living species of birds that inhabit different ecosystems
+      from the Arctic to the Antarctic. Many species undertake long distance
+      annual migrations, and many more perform shorter irregular journeys.
+    </p>
+    <hr />
+    <p>
+      There are around 10,000 living species of birds that inhabit different
+      ecosystems from the Arctic to the Antarctic.<img
+        src="images/bird.gif"
+        alt="Bird"
+        width="100"
+        height="100"
+      />Many species undertake long distance annual migrations, and many more
+      perform shorter irregular journeys.
+    </p>
+  </body>
 </html>
